<resources>
    <string name="app_name">MyCompass</string>
    <string name="accelerometer_values">Accelerometer Values</string>
    <string name="xValue">X-value: %1$s</string>
    <string name="yValue">Y-value: %1$s</string>
    <string name="zValue">Z-value: %1$s</string>
    <string name="tiltText">Tilt: %1$s</string>
    <string name="compass_values">COMPASS VALUES</string>
    <string name="an_image_of_a_compass">An image of a compass</string>
    <string name="explore_your_senses">I Sense,\nTherefore I Am</string>
    <string name="direction_text">South</string>
    <string name="headingAngleText">Heading: %1$s</string>
</resources>